--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airplan</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
 
@@ -25,8 +26,8 @@
         </nav>
 
 
-<p>Hallo</p>
-<p>Welche Ziele möchten Sie erkunden?</p>
+<p class="item" >Hallo</p>
+<p class="item" >Welche Ziele möchten Sie erkunden?</p>
 
 
 
@@ -37,9 +38,76 @@
 
 <img src="./plane_animation_img/images/airplane.png" class="airplane" alt="">
 
+<!--  proje-->
+<div class="flex">
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="./plane_animation_img/images/Kapadokya.jpg" class="image" alt="">
+
+        </div>
+        <div class="flip-card-back">
+            <p class="info" >CAPPADOCIA</p>
+          <p  > Hin-Rück Flug</p>
+          <p  ><del>99 $</del></p>
+          <p >39 $</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="./plane_animation_img/images/barcelona.jpg" class="image" alt="">
+
+        </div>
+        <div class="flip-card-back">
+            <p class="info" >BARCELONA</p>
+          <p> Hin-Rück Flug</p>
+          <p><del>87 $</del></p>
+          <p>21 $</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="./plane_animation_img/images/newyork.jpg" class="image" alt="">
+
+        </div>
+        <div class="flip-card-back">
+           <p class="info" >NEW YORK</p>     
+          <p> Hin-Rück Flug</p>
+          <p><del>799 $</del></p>
+          <p>299 $</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+
+
 
 
 </div>
+
+
+
+
+<footer>
+    <div class="text">© 2021 TURKISH AIRLINES. All rights reserved</div>
+    <div class="icons">
+     <a href="https://twitter.com/TurkishAirlines?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"> <i class="fab fa-twitter"></i></a>
+     <a href="https://www.instagram.com/turkishairlines/?hl=de"> <i class="fab fa-instagram"></i></a>
+     <a href="https://www.youtube.com/channel/UCSK1_qvsEuTNZnvLQvNRLGQ"> <i class="fab fa-youtube"></i></a>
+    </div>
+  </footer>
+
+
+
 
     
 </body>
